--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ html {
 }
 
 .header {
-  background-image: url('images/header-background.jpg');
+  background-image: url('header-background.jpg');
   background-size: cover;
   background-position: center;
   position: relative;
@@ -205,4 +205,5 @@ html {
 
 .row {
   font-family: 'Poppins', sans-serif;
+
 }
